Bug 1284388 - Check shape table consistency in debug builds r=terrence